# contop

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_GUIDE.md  security_audit.md
contop-cli-proxy/: README.md  package-lock.json  package.json  tsconfig.json
contop-desktop/: away-overlay.html  index.html  package-lock.json  package.json  vite.config.ts
contop-desktop/src-tauri/: .gitignore  Cargo.toml  nsis-hooks.nsh  tauri.conf.json  tauri.conf.release.json
contop-desktop/src-tauri/capabilities/: default.json
contop-desktop/src-tauri/icons/: icon.icns
contop-desktop/src-tauri/src/: away_mode.rs  lib.rs  main.rs  sidecar.rs
contop-mobile/: .gitignore  app.json  eas.json  global.css  jest.config.js  jest.setup.js  metro.config.js  mobile-config-atdd.test.js  package-lock.json  package.json  tailwind.config.js  (+1 more)
contop-server/: main.py  pyproject.toml
contop-server/core/: __init__.py  agent_config.py  agent_tools.py  audit_logger.py  document_tools.py  dual_tool_evaluator.py  execution_agent.py  file_tools.py  geo.py  llm_logger.py  memory_processors.py  pairing.py  settings.py  skill_executor.py  skill_loader.py  tracing.py  tunnel.py  webrtc_peer.py  webrtc_signaling.py  window_tools.py  workflow_tools.py
contop-server/platform_adapters/: __init__.py  base.py  linux.py  macos.py  windows.py
contop-server/prompts/: conversation-agent.md  execution-agent.md  planning-agent.md
contop-server/skills/builtin/advanced-workflows/: SKILL.md
contop-server/skills/builtin/advanced-workflows/scripts/: tools.py
contop-server/skills/builtin/cli-command-patterns/: SKILL.md
contop-server/skills/builtin/ide-chat/: SKILL.md
contop-server/skills/builtin/ide-chat/scripts/: cursor-accept.yaml  cursor-composer-open.yaml  cursor-composer-send.yaml  cursor-open.yaml  cursor-reject.yaml  cursor-send.yaml  ide-close-tab.yaml  ide-next-tab.yaml  ide-prev-tab.yaml  ide-save-file.yaml  ide-scroll-down.yaml  ide-scroll-up.yaml  ide-toggle-sidebar.yaml  ide-toggle-terminal.yaml  vscode-claude-accept.yaml  vscode-claude-history.yaml  vscode-claude-new.yaml  vscode-claude-open.yaml  vscode-claude-reject.yaml  vscode-claude-send.yaml  vscode-copilot-open.yaml  vscode-copilot-send.yaml
contop-server/skills/builtin/office-documents/: SKILL.md
contop-server/skills/builtin/office-documents/scripts/: convert_document.py
contop-server/skills/builtin/skill-authoring/: SKILL.md
contop-server/skills/builtin/web-research/: SKILL.md
contop-server/tests/: conftest.py
contop-server/tests/api/: test_health.py  test_health_atdd.py  test_pair_endpoints_atdd.py  test_qr_image_endpoint_atdd.py  test_settings_endpoint_atdd.py
contop-server/tests/unit/: test_accessible_execution.py  test_audit_logger.py  test_browser_automation.py  test_device_control.py  test_docker_sandbox.py  test_docker_sandbox_atdd.py  test_document_tools.py  test_dual_tool_evaluator.py  test_dual_tool_evaluator_atdd.py  test_execution_agent.py  test_execution_agent_atdd.py  test_file_tools.py  test_gemini_computer_use.py  test_gui_agent_optimization_atdd.py  test_gui_automation.py  test_gui_automation_atdd.py  test_host_subprocess.py  test_host_subprocess_atdd.py  test_main.py  test_memory_processors.py  test_model_resolution.py  test_omniparser.py  test_omniparser_local.py  test_pairing.py  test_pairing_atdd.py  test_project_structure_atdd.py  test_qr_image_storage_atdd.py  test_screen_capture.py  test_settings_atdd.py  test_skill_executor.py  test_skill_loader.py  test_smart_vision_routing.py  test_token_persistence.py  test_tunnel.py  test_tunnel_atdd.py  test_ui_automation.py  test_vision_client.py  test_webrtc_peer.py  test_webrtc_peer_atdd.py  test_webrtc_peer_screen.py  (+5 more)
contop-server/tools/: __init__.py  browser_automation.py  device_control.py  docker_sandbox.py  gemini_computer_use.py  gui_automation.py  host_subprocess.py  manual_control.py  omniparser_client.py  omniparser_local.py  screen_capture.py  setup_ml.py  ui_automation.py  vision_client.py
(+234 files in other folders)
